src/test/ui/range/issue-73553-misinterp-range-literal.stderr
error[E0308]: mismatched types
  --> $DIR/issue-73553-misinterp-range-literal.rs:12:10
   |
LL |     demo(tell(1)..tell(10));
   |          ^^^^^^^^^^^^^^^^^
   |          |
   |          expected reference, found struct `std::ops::Range`
   |          help: consider borrowing here: `&(tell(1)..tell(10))`
   |
   = note: expected reference `&std::ops::Range<usize>`
                 found struct `std::ops::Range<usize>`

error[E0308]: mismatched types
  --> $DIR/issue-73553-misinterp-range-literal.rs:14:10
   |
LL |     demo(1..10);
   |          ^^^^^
   |          |
   |          expected reference, found struct `std::ops::Range`
   |          help: consider borrowing here: `&(1..10)`
   |
   = note: expected reference `&std::ops::Range<usize>`
                 found struct `std::ops::Range<{integer}>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
